# tigerc

./: .gitignore  Cargo.toml  README.md  basic_add_01.parsedsol  run.sh  test.sh  test.tig
examples/: escape.tig  factorial.tig  fibonacci.tig  hailstones.tig  run.sh
runtime/: Makefile  libtiger.c  libtiger.h  tiger.c  tiger.h
src/: asm.rs  ast.rs  config.rs  display.rs  error.rs  ir.rs  lib.rs  main.rs  operand.rs  phase.rs  span.rs  token.rs  ty.rs  unit.rs  util.rs
src/analyze/: data.rs  flow.rs  mod.rs
src/assemble/: allocate.rs  mod.rs  tile.rs
src/check/: check.rs  context.rs  escape.rs  mod.rs
src/interpret/: mod.rs
src/ir/: mod.rs
src/lex/: error.rs  lexer.rs  mod.rs
src/optimize/: analysis.rs  coalesce.rs  mod.rs
src/parse/: display.rs  error.rs  grammar.lalrpop  literal.rs  mod.lalrpop  mod.rs
src/translate/: block.rs  canonize.rs  context.rs  flow.rs  fold.rs  frame.rs  mod.rs  reorder.rs  translate.rs
src/ty/: check.rs  context.rs  mod.rs
tests/: assemble.rs  lex.rs  parse.rs  test_parse.rs  type.rs
tests/lex/: bad_ident_01.tig  bad_ident_02.tig  generate.py  ident_01.lexedsol  ident_02.lexedsol  ident_03.lexedsol  ident_03.tig  ident_04.lexedsol  ident_04.tig  keyword_01.lexedsol  keyword_02.lexedsol  keyword_03.lexedsol  keyword_04.lexedsol  keyword_05.lexedsol  keyword_06.lexedsol  keyword_07.lexedsol  keyword_08.lexedsol  keyword_09.lexedsol  keyword_10.lexedsol  keyword_11.lexedsol  keyword_12.lexedsol  keyword_13.lexedsol  keyword_14.lexedsol  keyword_15.lexedsol  keyword_16.lexedsol  keyword_17.lexedsol  operator_01.lexedsol  (+23 more)
(+127 files in other folders)
