[package]
name = "tigerc"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]

[build-dependencies]
lalrpop = "0.15.2"

[dependencies]
codespan = "0.1.2"
codespan-reporting = "0.1.3"
lalrpop-util = "0.15.2"
im = "10.2.0"
regex = "1.0.0"
structopt = "0.2"
uuid = { version = "0.6", features = ["v4"] }


[[bin]]
name = "tigerc"
path = "src/main.rs"
