[package]
name = "tigerc"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]

[build-dependencies]
lalrpop = "0.15.2"

[dependencies]
codespan = "0.1.2"
codespan-reporting = "0.1.3"
fnv = "1.0.6"
itertools = "0.7"
lalrpop-util = "0.15.2"
petgraph = "0.4.13"
regex = "1.0.0"
structopt = "0.2"
simple-counter = "0.1.0"
simple-symbol = "1.0.0"

[[bin]]
name = "tigerc"
path = "src/main.rs"
